feat: determine